test/spec_vectors/memory/fail/module_17.wat
(module (func (drop (memory.size))))